--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ You can view my academic and professional experience on the [About Me](about.htm
 
 Homework details could be found [here](https://p8105.com/homework_4.html)
 
-I made some [informative plots](plotly.html) using the NYC Restaurant Inspections dataset, or you can view it by clicking on the "HW4" button in the right of navigation bar.
+I made some [informative plots](plotly.html) and a [flexdashboard](dashboard.html) using the [NYC Restaurant Inspections dataset](https://p8105.com/dataset_restaurant_inspections.html).
 
 ---
 
