--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -19,7 +19,7 @@ library(flexdashboard)
 Column {data-width=650}
 -----------------------------------------------------------------------
 
-### Chart A - Scatterplot
+### Chart A - Scatterplot of the distribution of scores across inspectation dates
 
 ```{r}
 data("rest_inspec")
@@ -45,7 +45,6 @@ scatter_plot =
     alpha = .5, text = ~text_label
     ) %>% 
   layout(
-    title = "The distribution of scores across inspectation dates",
     xaxis = list(title = "Inspection date"),
     yaxis = list(title = "Score")
     )
@@ -56,7 +55,7 @@ scatter_plot
 Column {data-width=350}
 -----------------------------------------------------------------------
 
-### Chart B - Box plot
+### Chart B - Boxplot of the distribution of scores across restaurants of 8 different cuisines
 
 ```{r}
 boxplot =
@@ -67,7 +66,6 @@ boxplot =
     ) %>% 
   plot_ly(y = ~score, color = ~cuisine_description, type = "box") %>% 
   layout(
-    title = "The distribution of scores across restaurants of 8 different cuisines",
     xaxis = list(title = "Cuisine of restaurant"),
     yaxis = list(title = "Score")
     )
@@ -75,7 +73,7 @@ boxplot =
 boxplot
 ```
 
-### Chart C - Bar plot
+### Chart C - Barchart of the frequency counts of restaurants of 8 different cuisines
 
 ```{r}
 barchart =
@@ -85,7 +83,6 @@ barchart =
   mutate(cuisine_description = fct_reorder(cuisine_description, n)) %>% 
   plot_ly(x = ~cuisine_description, y = ~n, color = ~cuisine_description, type = "bar", colors = "viridis") %>% 
   layout(
-    title = "The frequency counts of restaurants of 8 different cuisines",
     xaxis = list(title = "Cuisine of restaurant"),
     yaxis = list(title = "Frequency counts")
     )
